<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Customisable Maps</string>
    <string name="app_logo">App Logo</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_underlined"><u>Login</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_underlined"><u>Register</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="user_name">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="my_location">loc</string>
    <string name="logout">Logout</string>
</resources>